# misc01

./: LICENSE  README.md  first.md  kafka-docker-compose.txt  second.md
docs/: 004.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  017.md  018.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  034.md  035.md  036.md  037.md  038.md  039.html  cato-tables.csv  minimal.py  minimal_output.py  run101.py
docs/05/: 003.md  005.md  007.md  014.md  015.md  016.md  018.md  019.md  023.md  024.md  026.md
docs/06/: gecc_valkey9_demo_fix-ver.ipynb  postblog.docx
docs/2025-09-01/: trans.txt
src/: kafka-java-example.java  kafka-to-elastic-complete.java  kafka-to-elasticsearch.java
src/2024-12-08/: ElasticsearchExample.java  KafkaConsumerExample.java  build.gradle
src/2024-12-29/: ElasticsearchService.java  batchConfig.java  messageProcessor.java
src/hive_oracle_etl/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/hive_oracle_etl/deploy/openshift/: configmap.yaml  cronjob.yaml  kerberos-patch.example.yaml  kustomization.yaml  networkpolicy-egress.yaml  secret.yaml  serviceaccount.yaml
src/hive_oracle_etl/scripts/: oc_deploy.sh  run_local.sh  run_once_from_cronjob.sh
src/hive_oracle_etl/sql/: oracle_ddl.sql  oracle_drop_dev.sql
src/hive_oracle_etl/src/hive_oracle_etl/: config.py  hive.py  logging_config.py  main.py  oracle.py  transform.py
src/hive_oracle_etl/tests/: test_transform.py
(+49 files in other folders)
